# FerryManager

./: .gitignore  Animals.h  CLAUDE.md  CMakeLists.txt  Config.h  ConflgDefine.cpp  CppProperties.json  Environment.h  EnvironmentDefine.cpp  MyOperator.h  MyOperatorDefine.cpp  OPERATION_MANUAL.md  Organism.h  OrganismDefine.cpp  Plants.h  README.md  Registry.h  Word.h  WordDefine.cpp  World.h  WorldDefine.cpp  cpp.hint  debug_main.cpp  default_config.json  main.cpp  main.h  matplotlibcpp.h  plan.md  test.cpp  test.cpp.bak  test_main.cpp  操作手册.txt
.claude/: settings.local.json
boids/: GA.h  Genes.h  boids.cpp  boids.h  main.md  test.cpp
config/: Config.h  ConflgDefine.cpp  default_config.json
core/: Animals.h  Environment.h  EnvironmentDefine.cpp  Organism.h  OrganismDefine.cpp  Plants.h  Registry.h  World.h  WorldDefine.cpp
data/: game_data.json  game_struct.h  wowowo.json
docs/: OOP_BEST_PRACTICES.md
imguMe/: myui.cpp
operator/: MyOperator.h  MyOperatorDefine.cpp
ui/: SetupUI.cpp  SetupUI.h
